# spatial-notebooks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/samples/: README.md  nagoya_wards.csv
docs/: learning-plan.md  tips.md  week4-prompt.md
notebooks/: 01_python_basics.ipynb  02_jupyter_workflow.html  02_jupyter_workflow.ipynb  README.md
src/spatial_notebooks/: __init__.py  cli.py  stats.py
tests/: test_stats.py
